fix: Button contrast

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -143,18 +143,19 @@ h2 {
 }
 
 .details-button {
-    background-color: #999;
-    color: #FFF;
-    font-size: 1rem;
-    font-weight: 300;
-    margin-top: 10px;
-    padding: 14px 0;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
-    border-bottom-right-radius: 18px;
-    letter-spacing: 6px;
-    border-width: 0;
+  background-color: #fafafa;
+      color: #666;
+      font-size: 1rem;
+      margin-top: 10px;
+      padding: 14px 0;
+      text-align: center;
+      text-transform: uppercase;
+      width: 100%;
+      border-bottom-right-radius: 18px;
+      letter-spacing: 6px;
+      border-width: 0;
+      border-top: solid 2px #ccc;
+      cursor: pointer;
 }
 
 .listbox-container {
